# RTouhou

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  RFC R-Type  _alien_8hpp.html  _alien_8hpp__dep__incl.map  _alien_8hpp__dep__incl.md5  _alien_8hpp_source.html  _animation_8hpp.html  _animation_8hpp__dep__incl.map  _animation_8hpp__dep__incl.md5  _animation_8hpp_source.html  _animation_system_8cpp.html  _animation_system_8cpp__incl.map  _animation_system_8cpp__incl.md5  _animation_system_8hpp.html  _animation_system_8hpp__dep__incl.map  _animation_system_8hpp__dep__incl.md5  _animation_system_8hpp__incl.map  _animation_system_8hpp__incl.md5  _animation_system_8hpp_source.html  _background_system_8cpp.html  _background_system_8cpp__incl.map  _background_system_8cpp__incl.md5  _background_system_8hpp.html  _background_system_8hpp__dep__incl.map  _background_system_8hpp__dep__incl.md5  _background_system_8hpp__incl.map  _background_system_8hpp__incl.md5  _background_system_8hpp_source.html  _bonus_system_8cpp.html  _bonus_system_8cpp__incl.map  _bonus_system_8cpp__incl.md5  _bonus_system_8hpp.html  _bonus_system_8hpp__dep__incl.map  _bonus_system_8hpp__dep__incl.md5  _bonus_system_8hpp__incl.map  _bonus_system_8hpp__incl.md5  _bonus_system_8hpp_source.html  (+779 more)
.github/workflows/: build_cmake.yml  doxygen.yml
Bullets/: Bullets.cpp  Bullets.hpp  BulletsFactory.cpp  BulletsFactory.hpp
Bullets/BulletsType/: BasicWhiteBullets.cpp  BasicWhiteBullets.hpp
Client/include/: ClientCollision.hpp  ClientGame.hpp  Controller.hpp  CustomClient.hpp  Parallax.hpp  PlayerSystem.hpp  Sound.hpp  WavesClientSystem.hpp
Client/src/: ClientCollision.cpp  ClientGame.cpp  Parallax.cpp  PlayerSystem.cpp  Sound.cpp  WavesClientSystem.cpp  main.cpp
Commons/: CustomMsgTypes.hpp  commons.hpp
Ennemies/: Ennemies.cpp  Ennemies.hpp  EnnemiesFactory.cpp  EnnemiesFactory.hpp
Ennemies/EnnemiesType/: BasicPlane.cpp  BasicPlane.hpp  DarkBlueFerry.cpp  EnnemiesTypeInclude.hpp  GreenFerry.cpp  GreenFerry.hpp  OrangeFerry.cpp  whiteFerry.cpp  whiteFerry.hpp
Game/Bonus/: Bonus.cpp  Bonus.hpp  BonusFactory.cpp  BonusFactory.hpp
Game/Bonus/BonusType/: BonusInclude.hpp  ScoreUp.cpp  ScoreUp.hpp
Game/Bullets/: Bullets.cpp  Bullets.hpp  BulletsFactory.cpp  BulletsFactory.hpp
Game/Bullets/BulletsType/: BasicWhiteBullets.cpp  BasicWhiteBullets.hpp  BulletsPlT2.cpp  BulletsPlT2.hpp  BulletsPlT3.cpp  BulletsPlT3.hpp  BulletsTier2.cpp  BulletsTier2.hpp  BulletsTier3.cpp  BulletsTier3.hpp  BulletsTypeInclude.hpp  FriendlyBullets.cpp  FriendlyBullets.hpp
Game/Ennemies/: Ennemies.cpp  Ennemies.hpp  EnnemiesFactory.cpp  EnnemiesFactory.hpp  HitPoint.hpp
Game/Ennemies/EnnemiesType/: BasicPlane.cpp  BasicPlane.hpp  DarkBlueFerry.cpp  DarkBlueFerry.hpp  GreenFerry.cpp  GreenFerry.hpp  OrangeFerry.cpp  OrangeFerry.hpp  whiteFerry.cpp  whiteFerry.hpp
Game/GameScene/: GameEnnemiesLoop.cpp  GameEnnemiesLoop.hpp  GameScene.cpp  GameScene.hpp
Game/GlobalLibrary/: AbsctractLibrary.hpp  GlobalMusic.cpp  GlobalMusic.hpp  GlobalSound.cpp  GlobalSound.hpp  GlobalTexture.hpp
Game/GlobalTexture/: AbsctractLibrary.hpp  GlobalTexture.cpp  GlobalTexture.hpp
Game/Player/: Player.cpp  Player.hpp
Game/Waves/: AWaves.cpp  AWaves.hpp  IWaves.hpp  Wave.cpp  Wave.hpp  Waves1.cpp  Waves1.hpp
Game/Waves/WavesType/: WaveInclude.hpp  Waves1.cpp  Waves1.hpp  Waves2.cpp  Waves2.hpp  Waves3.cpp  Waves3.hpp  Waves4.cpp  Waves4.hpp  Waves5.cpp  Waves5.hpp
Menu/: Background.cpp  Background.hpp  Buttons.cpp  Buttons.hpp  Menu.cpp  Menu.hpp  Parallax.cpp  Parallax.hpp  Setting.cpp  Setting.hpp  Text.cpp  Text.hpp
NekoEngine/include/NekoEngine/: NekoEngine.hpp
NekoEngine/include/NekoEngine/ECS/: ComponentArray.hpp  ComponentArray.tpp  ComponentManager.hpp  ComponentManager.tpp  Coordinator.hpp  Coordinator.tpp  EntityManager.hpp  IComponentArray.hpp  System.hpp  SystemManager.hpp  SystemManager.tpp  Types.hpp
NekoEngine/include/NekoEngine/ECS/Components/: Alien.hpp  Animation.hpp  But.hpp  Color.hpp  Components.hpp  EntityType.hpp  GorbBackground.hpp  Gravity.hpp  Hostile.hpp  Networkable.hpp  Patterns.hpp  PlayerShoot.hpp  Renderable.hpp  RigidBody.hpp  Skin.hpp  Textinfo.hpp  Timer.hpp  Transform.hpp  Types.hpp  Uid.hpp  WeaponTier.hpp
NekoEngine/include/NekoEngine/ECS/Systems/: AnimationSystem.hpp  BackgroundSystem.hpp  BonusSystem.hpp  Collision.hpp  MouseSystem.hpp  ParallaxSystem.hpp  PatternSystem.hpp  PhysicsSystem.hpp  RenderSystem.hpp  Systems.hpp  TextSystem.hpp  TimerSystem.hpp
NekoEngine/include/NekoEngine/Graphics/: NekoWindowException.hpp  Scenes.hpp  Window.hpp
NekoEngine/include/NekoEngine/Graphics/Types/: Color.hpp
NekoEngine/include/NekoEngine/Math/Matrix/: Matrix.hpp  Matrix.tpp
NekoEngine/include/NekoEngine/NekoException/: NekoException.hpp
NekoEngine/include/NekoEngine/Scenes/: Scene.hpp
NekoEngine/src/ECS/: EntityManager.cpp
NekoEngine/src/ECS/Components/: Patterns.cpp  Timer.cpp
NekoEngine/src/ECS/Systems/: AnimationSystem.cpp  BackgroundSystem.cpp  BonusSystem.cpp  Collision.cpp  MouseSystem.cpp  ParallaxSystem.cpp  PatternSystem.cpp  PhysicsSystem.cpp  RenderSystem.cpp  TextSystem.cpp  TimerSystem.cpp
NekoEngine/src/Graphics/: NekoWindowException.cpp  Window.cpp
NekoEngine/src/NekoException/: NekoException.cpp
NekoEngine/src/Scenes/: Scene.cpp
NyaLog/NyaLog/: NyaLog.hpp  NyaLog.inl
NyaNet/NyaNet/: NyaNet.hpp  NyaNet_client.h  NyaNet_common.h  NyaNet_connection.h  NyaNet_message.h  NyaNet_server.h  NyaNet_tsqueue.h
Server/src/: CustomServer.cpp  main.cpp
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  (+74 more)
(+8 files in other folders)
